--- a/.github/workflows/publish_image.yml
+++ b/.github/workflows/publish_image.yml
@@ -46,7 +46,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./dockerfiles/notebook
+          file: ./dockerfiles/notebook/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
